# aws-lifecycle-automation

./: .codespellrc  .gitignore  .pre-commit-config.yaml  README.md  ruff.toml
.github/workflows/: ci.yml  deployment.yml
bootstrap/: backend.py  bootstrap.py  config.py  iam.py  oidc.py  pyproject.toml  requirements.txt
bootstrap/tests/: test_config.py  test_iam.py
code/infra/: main.tf  providers.tf
code/infra/infrastructure-live/dev/: dev.auto.tfvars.json  main_override.tf
code/infra/infrastructure-live/prod/: main_override.tf  prod.auto.tfvars.json
code/infra/modules/app/buffer_processor/: data.tf  locals.tf  main.tf  output.tf  variables.tf
code/infra/modules/app/dynamo_tables/: locals.tf  main.tf  outputs.tf  variables.tf
code/infra/modules/app/fan_out_buffer/: locals.tf  main.tf  output.tf  variables.tf
code/infra/modules/app/file_processor/: data.tf  (+4 more)
code/infra/modules/lambda-functions/: main.tf  output.tf  variables.tf
code/infra/modules/lambda-layers/: build_uv_layer.sh  locals.tf  main.tf  variables.tf
code/infra/modules/s3-bucket/: data.tf  locals.tf  main.tf  output.tf  variables.tf
code/pipeline/: pipeline-apply-role-bootstrap.yml  pipeline-plan-role-bootstrap.yml  pipeline-roles-bootstrap.sh
code/python/: pyproject.toml
code/python/buffer_processor/: main.py  pyproject.toml
code/python/common/: aws_utilities.py  main.py
code/python/common/database/: adapter.py  dynamo_db.py
code/python/common/models/: user.py
code/python/file_processor/: main.py  pyproject.toml
code/python/sample_data/: sample_users.json
code/python/tests/: conftest.py  test_aws_utilities.py  test_buffer_processor.py  test_file_processor.py  test_user_model.py
docs/: bootstrap.md
(+10 files in other folders)
